WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207860
REGRESSION (
r251320
): Data detectors do not trigger on macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=207860
Summary
REGRESSION (r251320): Data detectors do not trigger on macCatalyst
Megan Gardner
Reported
2020-02-17 14:16:06 PST
Send touches to data detectors gesture on macCataylst as the gesture currently runs on touch data.
Attachments
Patch
(1.73 KB, patch)
2020-02-17 14:19 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.71 KB, patch)
2020-02-17 14:41 PST
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2020-02-17 14:19:13 PST
Created
attachment 390979
[details]
Patch
Megan Gardner
Comment 2
2020-02-17 14:20:02 PST
<
rdar://problem/59038913
>
Tim Horton
Comment 3
2020-02-17 14:26:31 PST
Comment on
attachment 390979
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=390979&action=review
> Source/WebKit/ChangeLog:3 > + Send touches to data detectors gesture on macCataylst as the gesture currently runs on touch data.
DataDetectors, macCatalyst (the y is misplaced), also this should be the "problem" not the "solution" ("REGRESSION (r???): Data Detectors gesture does not trigger in macCatalyst")
Megan Gardner
Comment 4
2020-02-17 14:41:06 PST
Created
attachment 390983
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2020-02-17 16:50:46 PST
Comment on
attachment 390983
[details]
Patch for landing Clearing flags on attachment: 390983 Committed
r256790
: <
https://trac.webkit.org/changeset/256790
>
WebKit Commit Bot
Comment 6
2020-02-17 16:50:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug