Cherry-pick r256790. rdar://problem/59576023

Data detectors do not trigger on macCatalyst
    https://bugs.webkit.org/show_bug.cgi?id=207860
    <rdar://problem/59038913>

    Reviewed by Tim Horton.

    The lookup gesture which run data detection needs touch information to function. Allow touches to be sent to the gesture.

    * UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView gestureRecognizer:shouldReceiveTouch:]):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256790 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@257030 268f45cc-cd09-0410-ab3c-d52691b4dbfc